# rust_in_action

./: Cargo.toml
ch1-penguins/src/: main.rs
ch2-grep-lite-regex/: Cargo.toml
ch2-grep-lite-regex-2/: Cargo.toml
ch2-grep-lite-regex-2/src/: main.rs
ch2-grep-lite-regex/src/: main.rs
ch2-intro-to-numbers/: Cargo.toml
ch2-intro-to-numbers/src/: main.rs
ch2-intro-vec/: Cargo.toml
ch2-intro-vec/src/: main.rs
ch2-str-simple-pattern/src/: main.rs
ch3-def-files/: Cargo.toml
ch3-def-files/src/: main.rs
ch3-file-states/src/: main.rs
ch3-mock-file/src/: main.rs
ch3-not-quite-file/: Cargo.toml
ch3-not-quite-file/src/: main.rs
ch3-parse-logs/: Cargo.toml
ch3-parse-logs/src/: main.rs
ch3-skeleton-read-trait/: Cargo.toml
ch3-skeleton-read-trait/src/: main.rs
ch4-sat-mailbox/src/: main.rs
ch4-short-lived-strategy/src/: main.rs
