[workspace]

members = [
    "ch1-penguins",
    "ch2-intro-to-numbers",
    "ch2-str-simple-pattern",
    "ch2-intro-vec",
    "ch2-grep-lite-regex",
    "ch2-grep-lite-regex-2",
    "ch3-mock-file",
    "ch3-not-quite-file",
    "ch3-def-files",
    "ch3-parse-logs",
    "ch3-file-states",
    "ch3-skeleton-read-trait",
    "ch4-sat-mailbox",
    "ch4-short-lived-strategy"
]
